[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragas-ainative"
version = "0.1.0"
description = "Configure ragas RAG evaluation to use AINative's free LLMs + embeddings — no OpenAI key needed."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AINative Studio", email = "dev@ainative.studio"},
]
keywords = [
    "ragas",
    "rag-evaluation",
    "rag",
    "ainative",
    "free-embeddings",
    "free-llm",
    "zerodb",
    "auto-provisioning",
    "faithfulness",
    "answer-relevancy",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/ragas-ainative"
Documentation = "https://docs.ainative.studio"
Repository = "https://github.com/AINative-Studio/ragas-ainative"
Issues = "https://github.com/AINative-Studio/ragas-ainative/issues"

[tool.setuptools.packages.find]
include = ["ragas_ainative*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
